docs/references/0.15.x/models/log.md
# Log

Log

## Properties

| Name | Type | Description |
|------|------|-------------|
| event | string | Event name. |
| userId | string | User ID. |
| userEmail | string | User Email. |
| userName | string | User Name. |
| mode | string | API mode when event triggered. |
| ip | string | IP session in use when the session was created. |
| time | integer | Log creation time in Unix timestamp. |
| osCode | string | Operating system code name. View list of [available options](https://github.com/appwrite/appwrite/blob/master/docs/lists/os.json). |
| osName | string | Operating system name. |
| osVersion | string | Operating system version. |
| clientType | string | Client type. |
| clientCode | string | Client code name. View list of [available options](https://github.com/appwrite/appwrite/blob/master/docs/lists/clients.json). |
| clientName | string | Client name. |
| clientVersion | string | Client version. |
| clientEngine | string | Client engine name. |
| clientEngineVersion | string | Client engine name. |
| deviceName | string | Device name. |
| deviceBrand | string | Device brand name. |
| deviceModel | string | Device model name. |
| countryCode | string | Country two-character ISO 3166-1 alpha code. |
| countryName | string | Country name. |

## Example

### REST

```json
{}
```

### GraphQL

```json
{}
```

